almost all lib choose and templates included, static files does not works on running server, can't figure out why yet

--- a/salmon/templates/index.jade
+++ b/salmon/templates/index.jade
@@ -1,3 +1,5 @@
+extends layout
+
 form.form-horizontal(method='post', enctype='multipart/form-data')
   div.control-group
     label.control-label(for='file-field') Torrent file
