static files moved to a more relavant location

--- a/salmon/templates/layout.jade
+++ b/salmon/templates/layout.jade
@@ -2,8 +2,8 @@
 html
   head
     title torrent manager
-    link(href='/css/bootstrap.css', media='screen', rel='stylesheet', type='text/css')
-    link(href='/css/main.css', media='screen', rel='stylesheet', type='text/css')
+    link(href='/static/css/bootstrap.css', media='screen', rel='stylesheet', type='text/css')
+    link(href='/static/css/main.css', media='screen', rel='stylesheet', type='text/css')
     //script(src='/socket.io/socket.io.js')
   body
     div.navbar.navbar-fixed-top
