first version with every sall problem fixed

--- a/salmon/templates/contact.jade
+++ b/salmon/templates/contact.jade
@@ -1,3 +1,4 @@
-<div> abcdefg
-
-</div>
+div
+  | Please contact 
+  a(href='mailto:daroth@braindead.fr') daroth@braindead.fr 
+  | for more informations.
