--- a/salmon/templates/layout.jade
+++ b/salmon/templates/layout.jade
@@ -1,40 +1,33 @@
 !!! 5
 html
   head
-    title torrent manager
+    title=siteName
     link(href='/static/css/bootstrap.css', media='screen', rel='stylesheet', type='text/css')
     link(href='/static/css/main.css', media='screen', rel='stylesheet', type='text/css')
-    //script(src='/socket.io/socket.io.js')
-  body
-    div.navbar.navbar-fixed-top
-      div.navbar-inner
-        div.container
-          a.btn.btn-navbar(ata-toggle='collapse', data-target='.nav-collapse')
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.brand(href='/') Torrent Manager
-          div.nav-collapse
-            ul.nav
+body
+  div.navbar.navbar-fixed-top
+    div.navbar-inner
+      div.container
+        a.btn.btn-navbar(ata-toggle='collapse', data-target='.nav-collapse')
+          a.brand(href='/') Salmon Fisher
+        div.nav-collapse
+          ul.nav
+            li
+              a(data-toggle='modal', href='#modal_about') About
+            li
+              a(data-toggle='modal', href='#modal_contact') Contact
+            - if (user and user.id)
               li
-                a(href=url_for("web.index")) Index
+                a(href='/admin/') Admin
               li
-                a(href=url_for("web.about")) About
-              li
-                a(href='/contact') Contact
-              - if (user)
-                li
-                  a(href=url_for("auth.login")) Admin
-                li
-                  a(href=url_for("auth.logout")) Disconnection
-    div.container
-      h1= title
-      // - if (flash.error != undefined)
-      //  div
-      //   each err in flash.error
-      //      div.label.label-important= err
-      //- if(flash.success != undefined)
-      //  div
-      //    each success in flash.success
-      //     div.label.label-success= success
-      div!= body
+                a(href=url_for("auth.logout")) Logout
+  div
+    block body
+
+include modal/about.jade
+include modal/contact.jade
+
+script(type="text/javascript", src='/static/js/jquery-1.7.2.min.js')
+script(type="text/javascript", src='/static/js/jquery-ui-1.8.21.custom.min.js')
+script(type="text/javascript", src='/static/js/bootstrap.js')
+`
