--- a/salmon/templates/main.jade
+++ b/salmon/templates/main.jade
@@ -1,17 +1,25 @@
-.container-fluid
-	.row-fluid
-		.span3
-			include ./uploadTorrent.jade
-		.span9
-			ul.nav.nav-tabs
-				li.active
-					a(data-toggle="tab",href="#main_downloading")="Dowloading"
-				li
-					a(data-toggle="tab",href="#main_finished")="Finished"
+extends layout
 
-			.tab-content
-				#main_downloading.tab-pane.active
-					include ./main_downloading.jade
+block body
+	.container-fluid
+		.row-fluid
+			.span3
+				include ./uploadTorrent.jade
+			.span9
+			
+				ul.nav.nav-tabs
+					li.active
+						a(data-toggle="tab",href="#main_all")="All"
+					- each filter in filters
+						li
+							a(data-toggle="tab",href="#main_" + filter.name)=filter.name
+					li
+						a(onclick="alert('New')")="+"
 
-				#main_finished.tab-pane
-					include ./main_finished.jade
+				.tab-content
+					#main_all.tab-pane.active
+						include ./filtered_list.jade
+					
+					- each filter in filters
+						.tab-pane(id="main_"+filter.name)
+							include ./filtered_list.jade
